--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,11 @@
+=== 0.1.3 / 2009-09-24
+
+* Require Ronin >= 0.3.0.
+* Require RSpec >= 1.2.8.
+* Moved to YARD based documentation.
+* Removed requirement on ronin-web.
+* Updated the project summary and 3-point description for Ronin Dorks.
+
 === 0.1.2 / 2009-07-02
 
 * Use Hoe >= 2.0.0.
