--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,7 @@
 === 0.1.3 / 2009-09-24
 
-* Require Ronin >= 0.3.0.
-* Require RSpec >= 1.2.8.
+* Require ronin >= 0.3.0.
+* Require rspec >= 1.2.8.
 * Moved to YARD based documentation.
 * Removed requirement on ronin-web.
 * Updated the project summary and 3-point description for Ronin Dorks.
